# husarion-depthai-snap

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  SPEC-camera-config.md  compose.yaml  justfile  snapcraft_template.yaml.jinja2
.github/workflows/: build.yaml  ci.yaml  publish.yaml  snap.yaml
demo/: compose.yaml  rviz.launch.py
ros/husarion_depthai_pipeline/: CMakeLists.txt  package.xml  plugins.xml
ros/husarion_depthai_pipeline/include/husarion_depthai_pipeline/: depth_dual.hpp  dual_pipeline.hpp  rgb_dual.hpp
ros/husarion_depthai_pipeline/src/: depth_dual.cpp  dual_pipeline.cpp  rgb_dual.cpp
snap/: snapcraft.yaml
snap/hooks/: configure  connect-plug-agent-chain  connect-plug-ros-humble-ros-base  disconnect-plug-agent-chain  install  post-refresh
snap/husarion-agent-extras/config-seed/: agent.yaml  follow.yaml
snap/husarion-agent-extras/config-seed/config/camera/: local.env
snap/husarion-agent-extras/config-seed/hooks/: camera  network  rmw
snap/husarion-agent-extras/config-seed/manifests/: camera.yaml  network.yaml
snap/husarion-agent-extras/config-seed/presets/: indoor-zenoh.yaml  isolated-localhost.yaml  multi-robot-fastdds-udp.yaml
snap/local/: AGENTS.md  apply_defaults.sh  camera-params-default.yaml  camera-params-depth-disp-h264.yaml  camera-params-dual-rgb-1080p-raw-720p-enc.yaml  camera-params-dual-rgb-1080p.yaml  camera-params-dual-rgb-360p-raw-720p-enc.yaml  camera-params-dual-rgb-360p.yaml  camera-params-dual-rgb.yaml  camera-params-dual-rgbd.yaml  camera-params-oak-1-lite.yaml  camera-params-oak-d-pro-poe.yaml  camera-params-oak-d-pro-slam.yaml  camera-params-oak-d-pro.yaml  camera-params-rgb-h264-1080p60.yaml  camera-params-rgb-h264-360p30.yaml  camera-params-rgb-h264-360p60.yaml  camera-params-rgb-h264-4k30.yaml  camera-params-rgb-h264-720p30.yaml  camera-params-rgb-h264-720p60.yaml  camera-params-rgb-raw-1080p-h264-1080p.yaml  camera-params-rgb-raw-1080p-h264-720p.yaml  camera-params-rgb-raw-360p-h264-360p.yaml  camera-params-rgb-raw-360p-h264-720p.yaml  camera-params-rgb-raw-720p-h264-720p.yaml  camera-params-rgbd-rgb-h264-720p-depth-raw-disp-h264.yaml  camera-params-streaming-h264-1080p60.yaml  camera-params-streaming-h264-360p30.yaml  camera-params-streaming-h264-360p60.yaml  camera-params-streaming-h264-4k30.yaml  camera-params-streaming-h264-720p60.yaml  camera-params-streaming-h264.yaml  camera-probe.py  check_daemon_running.sh  depthai.launch.py  depthai_params.yaml  ffmpeg-params-default.yaml  image_view_launcher.sh  launcher.sh  post_install.sh  (+2 more)
snap/local/local-ros/: ros.env
snap/local/ros_common/: configure_hook_ros.sh
